fixed rendering issues on mobile.

--- a/Pubhack4/app/gulp/sass/styles.scss
+++ b/Pubhack4/app/gulp/sass/styles.scss
@@ -14,6 +14,10 @@ body {
 	padding: 1.5em;
 
 	height: 100%;
+
+	@media all and (max-width: 450px) {
+		padding: 1em .75em;
+	}
 }
 
 .main {
@@ -31,6 +35,10 @@ body {
 
 p {
 	margin-bottom: 2em;
+}
+
+input[type=file] {
+	width: 220px;
 }
 
 img {
@@ -81,12 +89,21 @@ img {
 	max-width: 448px;
 	margin: 0 auto;
 
+	@media all and (max-width: 450px) {
+		max-width: 300px;
+	}
+
+	@media all and (max-width: 320px) {
+		max-width: 275px;
+	}
+
 	ul {
 		transition: transform .3s;
 		white-space: nowrap;
 
 
 		li {
+			box-sizing: border-box;
 			position: relative;
 			display: inline-block;
 			margin-bottom: 2em;
@@ -96,11 +113,20 @@ img {
 			text-align: center;
 
 			width: 400px;
+
+			@media all and (max-width: 450px) {
+				margin-left: 0;
+				width: 100%;
+			}
 		}
 	}
 
 	img {
 		max-height: 560px;
+
+		@media all and (max-width: 450px) {
+			max-height: 350px;
+		}
 	}
 }
 
